--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "build:analyze": "ANALYZE=true next build",
     "dev": "next dev",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "format": "prettier --write .",
-    "start": "next start"
+    "format:check": "prettier --check .",
+    "start": "next start",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
